@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.CookieValue;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -51,7 +51,6 @@ import iso25.g05.esi_media.service.ListaService;
  */
 @RestController
 @RequestMapping("/listas/gestor")
-@CrossOrigin(origins = "*")
 public class ListaGestorController extends BaseListaController {
     
     private static final Logger logger = LoggerFactory.getLogger(ListaGestorController.class);
@@ -66,13 +65,15 @@ public class ListaGestorController extends BaseListaController {
     @PostMapping
     public ResponseEntity<Map<String, Object>> crearLista(
             @RequestBody PlaylistDto listaDto,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
-        ResponseEntity<Map<String, Object>> validacion = validarToken(authHeader, "crear lista de gestor", logger);
-        if (validacion != null) return validacion;
+        if (token == null || token.isBlank()) {
+            logger.warn("Intento de crear lista de gestor sin token de autorización");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                .body(Map.of("success", false, "mensaje", "Token de autorización requerido"));
+        }
         
         try {
-            String token = extraerToken(authHeader);
             PlaylistDto listaCreada = listaService.crearListaDesdeDto(listaDto, token);
             
             Map<String, Object> response = crearRespuestaExito("Lista creada correctamente y asociada al usuario.");
@@ -95,13 +96,15 @@ public class ListaGestorController extends BaseListaController {
      */
     @GetMapping("/mias")
     public ResponseEntity<Map<String, Object>> obtenerListasPropiasGestor(
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
-        ResponseEntity<Map<String, Object>> validacion = validarToken(authHeader, "obtener listas propias de gestor", logger);
-        if (validacion != null) return validacion;
+        if (token == null || token.isBlank()) {
+            logger.warn("Intento de obtener listas propias de gestor sin token de autorización");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                .body(Map.of("success", false, "mensaje", "Token de autorización requerido"));
+        }
         
         try {
-            String token = extraerToken(authHeader);
             List<PlaylistDto> listas = listaService.findListasPropias(token);
             
             Map<String, Object> response = crearRespuestaExito("Listas propias obtenidas exitosamente");
@@ -125,13 +128,15 @@ public class ListaGestorController extends BaseListaController {
      */
     @GetMapping("/todas")
     public ResponseEntity<Map<String, Object>> obtenerTodasLasListas(
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
-        ResponseEntity<Map<String, Object>> validacion = validarToken(authHeader, "obtener todas las listas", logger);
-        if (validacion != null) return validacion;
+        if (token == null || token.isBlank()) {
+            logger.warn("Intento de obtener todas las listas sin token de autorización");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                .body(Map.of("success", false, "mensaje", "Token de autorización requerido"));
+        }
         
         try {
-            String token = extraerToken(authHeader);
             List<PlaylistDto> listas = listaService.findListasVisiblesGestores(token);
             
             Map<String, Object> response = crearRespuestaExito("Todas las listas visibles obtenidas exitosamente");
@@ -156,19 +161,17 @@ public class ListaGestorController extends BaseListaController {
     @GetMapping("/{id}")
     public ResponseEntity<Map<String, Object>> obtenerListaPorId(
             @PathVariable String id,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
         Map<String, Object> response = new HashMap<>();
         
         try {
-            if (authHeader == null || authHeader.trim().isEmpty()) {
+            if (token == null || token.isBlank()) {
                 logger.warn("Intento de obtener lista {} sin token de autorización", id);
                 response.put(SUCCESS, false);
                 response.put(MENSAJE, TOKEN_REQUERIDO);
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
             }
-            
-            String token = extraerToken(authHeader);
             PlaylistDto lista = listaService.findListaById(id, token);
             
             response.put(SUCCESS, true);
@@ -196,19 +199,17 @@ public class ListaGestorController extends BaseListaController {
     @GetMapping("/{id}/contenidos")
     public ResponseEntity<Map<String, Object>> obtenerContenidosLista(
             @PathVariable String id,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
         Map<String, Object> response = new HashMap<>();
         
         try {
-            if (authHeader == null || authHeader.trim().isEmpty()) {
+            if (token == null || token.isBlank()) {
                 logger.warn("Intento de obtener contenidos de lista {} sin token de autorización", id);
                 response.put(SUCCESS, false);
                 response.put(MENSAJE, TOKEN_REQUERIDO);
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
             }
-            
-            String token = extraerToken(authHeader);
             List<iso25.g05.esi_media.dto.ContenidoResumenDTO> contenidos = listaService.findContenidosLista(id, token);
             
             response.put(SUCCESS, true);
@@ -238,19 +239,17 @@ public class ListaGestorController extends BaseListaController {
     public ResponseEntity<Map<String, Object>> editarLista(
             @PathVariable String id,
             @RequestBody PlaylistDto updatedListaDto,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
         Map<String, Object> response = new HashMap<>();
         
         try {
-            if (authHeader == null || authHeader.trim().isEmpty()) {
+            if (token == null || token.isBlank()) {
                 logger.warn("Intento de editar lista de gestor {} sin token de autorización", id);
                 response.put(SUCCESS, false);
                 response.put(MENSAJE, TOKEN_REQUERIDO);
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
             }
-            
-            String token = extraerToken(authHeader);
             
             // Usar el nuevo método que maneja DTOs completos incluyendo contenidosIds
             PlaylistDto listaEditada = listaService.updateListaDesdeDto(id, updatedListaDto, token);
@@ -280,19 +279,17 @@ public class ListaGestorController extends BaseListaController {
     @DeleteMapping("/{id}")
     public ResponseEntity<Map<String, Object>> eliminarLista(
             @PathVariable String id,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
         Map<String, Object> response = new HashMap<>();
         
         try {
-            if (authHeader == null || authHeader.trim().isEmpty()) {
+            if (token == null || token.isBlank()) {
                 logger.warn("Intento de eliminar lista de gestor {} sin token de autorización", id);
                 response.put(SUCCESS, false);
                 response.put(MENSAJE, TOKEN_REQUERIDO);
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
             }
-            
-            String token = extraerToken(authHeader);
             listaService.deleteLista(id, token);
             
             response.put(SUCCESS, true);
@@ -320,19 +317,17 @@ public class ListaGestorController extends BaseListaController {
     public ResponseEntity<Map<String, Object>> agregarContenido(
             @PathVariable String id,
             @PathVariable String contenidoId,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
         Map<String, Object> response = new HashMap<>();
         
         try {
-            if (authHeader == null || authHeader.trim().isEmpty()) {
+            if (token == null || token.isBlank()) {
                 logger.warn("Intento de añadir contenido a lista de gestor {} sin token de autorización", id);
                 response.put(SUCCESS, false);
                 response.put(MENSAJE, TOKEN_REQUERIDO);
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
             }
-            
-            String token = extraerToken(authHeader);
             PlaylistDto listaActualizada = listaService.addContenido(id, contenidoId, token);
             
             response.put(SUCCESS, true);
@@ -362,19 +357,17 @@ public class ListaGestorController extends BaseListaController {
     public ResponseEntity<Map<String, Object>> eliminarContenido(
             @PathVariable String id,
             @PathVariable String contenidoId,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @CookieValue(value = "SESSION_TOKEN", required = false) String token) {
         
         Map<String, Object> response = new HashMap<>();
         
         try {
-            if (authHeader == null || authHeader.trim().isEmpty()) {
+            if (token == null || token.isBlank()) {
                 logger.warn("Intento de eliminar contenido de lista de gestor {} sin token de autorización", id);
                 response.put(SUCCESS, false);
                 response.put(MENSAJE, TOKEN_REQUERIDO);
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
             }
-            
-            String token = extraerToken(authHeader);
             PlaylistDto listaActualizada = listaService.removeContenido(id, contenidoId, token);
             
             response.put(SUCCESS, true);
